Fix sub menu not being visible

--- a/src/header/main-menu/style.scss
+++ b/src/header/main-menu/style.scss
@@ -39,6 +39,8 @@
 
             .menu {
                 display: none;
+                background: $grey;
+                z-index: 100;
             }
 
             &:hover {
